syntax = "proto3";
package data_plane;

option go_package = "github.com/eth-easl/cluster_manager/api/proto";

enum L4Protocol {
  TCP = 0;
  UDP = 1;
}

message PortMapping {
  int32 HostPort = 1;
  int32 GuestPort = 2;
  L4Protocol Protocol = 3;
}

message AutoscalingConfiguration {
  int32 ScalingUpperBound = 1;
  int32 ScalingLowerBound = 2;
  float PanicThresholdPercentage = 3;
  float MaxScaleUpRate = 4;
  float MaxScaleDownRate = 5;
  int32 ContainerConcurrency = 6;
  int32 ContainerConcurrencyTargetPercentage = 7;
  int32 StableWindowWidthSeconds = 8;
  int32 PanicWindowWidthSeconds = 9;
  int32 ScalingPeriodSeconds = 10;
}

message ServiceInfo {
  string Name = 1;
  string Image = 2;
  PortMapping PortForwarding = 3;
  AutoscalingConfiguration AutoscalingConfig = 4;
}

message ServiceList {
  repeated string Service = 1;
}

message ActionStatus {
  bool Success = 1;
  string Message = 2;
}